--- a/index.html
+++ b/index.html
@@ -18,17 +18,17 @@
         <div class="navigation">
           <nav>
             <ul>
-              <li>On Campus</li>
-              <li>Online</li>
-              <li>For companies</li>
-              <li>Sign in</li>
+              <li><a href="#">On Campus</a></li>
+              <li><a href="#">Online</a></li>
+              <li><a href="#">For companies</a></li>
+              <li><a href="#">Sign in</a></li>
             </ul>
           </nav>
           <nav class="mobile-nav">
             <ul>
-              <li><img src="resources/images/ic-on-campus.svg"></li>
-              <li><img src="resources/images/ic-online.svg"></li>
-              <li><img src="resources/images/ic-login.svg"></li>
+              <li><a href="#"><img src="resources/images/ic-on-campus.svg"></a></li>
+              <li><a href="#"><img src="resources/images/ic-online.svg"></a></li>
+              <li><a href="#"><img src="resources/images/ic-login.svg"></a></li>
             </ul>
           </nav>
         </div>
